# claude-code-status-line

./: .editorconfig  .gitignore  .tokeignore  AGENTS.md  CHANGELOG.md  Justfile  README.md  calibrate_token_counting.py  common.py  pyproject.toml  release-please-config.json  statusline-with-context.py
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_eaf48a43210c9df8f4283d17b8a4c1dd3863269e_20251126_213214.json  0002_eaf48a43210c9df8f4283d17b8a4c1dd3863269e_20251126_213232_uncommited-changes.json  0003_d9b7064e2f204550df6b06f58ff4678cd4980765_20251201_220927_uncommited-changes.json
.github/workflows/: ci.yml  publish.yml  release.yml
.hooks/: pre-commit
script/: code_quality.sh
scripts/: benchmark.sh  install.sh  uninstall.sh
src/claude_code_statusline/: __init__.py  calibrate.py  common.py  renderer.py  statusline.py  types.py
src/claude_code_statusline/cli/: __init__.py  bootstrap.py  commands.py
src/claude_code_statusline/config/: defaults.py  loader.py  schema.py
src/claude_code_statusline/parsers/: jsonl.py  tokens.py
src/claude_code_statusline/utils/: colors.py  credentials.py  debug.py  formatting.py  git.py  models.py  settings.py  terminal.py
src/claude_code_statusline/widgets/: base.py  registry.py
src/claude_code_statusline/widgets/builtin/: __init__.py  context.py  cost.py  directory.py  git.py  model.py  separator.py  session.py  subscription.py
tests/: conftest.py
tests/fixtures/: basic_session.jsonl  forked_session.jsonl  session_with_compact.jsonl  session_with_image.jsonl
tests/integration/: test_config_system.py  test_statusline_output.py  test_transcript_parsing.py
tests/performance/: __init__.py  test_startup_performance.py
tests/unit/: test_bootstrap.py  test_cli.py  test_compact_widgets.py  test_context_window.py  test_credentials.py  test_renderer_width.py  test_settings.py  test_terminal_title.py  test_terminal_width.py  test_token_counting.py  test_visible_len.py  test_widgets.py
