[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-statusline"
version = "0.8.6"
description = "A Python script for Claude Code statusline with context usage tracking"
readme = "README.md"
license = "MIT"
authors = [{name = "Will Pfleger", email = "pfleger.will@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/wpfleger96/claude-code-status-line"
Repository = "https://github.com/wpfleger96/claude-code-status-line.git"
Documentation = "https://github.com/wpfleger96/claude-code-status-line#readme"
"Bug Tracker" = "https://github.com/wpfleger96/claude-code-status-line/issues"
Changelog = "https://github.com/wpfleger96/claude-code-status-line/blob/main/CHANGELOG.md"

[project.scripts]
claude-statusline = "claude_code_statusline.statusline:main"

[dependency-groups]
dev = [
    "python-semantic-release>=9.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests with file I/O",
    "performance: Performance benchmarks (opt-in, slow)",
]
# Default: skip performance tests unless explicitly requested
addopts = "-m 'not performance' -v --cov=claude_code_statusline --cov-report=term-missing"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
branch = "main"
commit_parser = "conventional"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "chore", "ci", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.commit_type_map]
chore = "patch"
ci = "patch"
docs = "patch"
style = "patch"
refactor = "patch"
test = "patch"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.remote]
type = "github"

[tool.ruff.lint]
select = ["I", "F", "UP", "B"]  # isort, pyflakes, pyupgrade, bugbear

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
